--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "name": "maltimart-ecommerce",
   "version": "0.1.0",
   "private": true,
+  "proxy" : "http://localhost:5000",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
-    "@reduxjs/toolkit": "^1.8.5",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.0",
     "bootstrap": "^5.2.1",
     "framer-motion": "^7.10.3",
     "mdb-react-ui-kit": "^6.2.0",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^9.1.4",
     "remixicon": "^2.5.0",
     "web-vitals": "^2.1.4"
