--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "maltimart-ecommerce",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@reduxjs/toolkit": "^1.9.5",
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.2.1",
+    "firebase": "^10.4.0",
     "framer-motion": "^7.10.3",
     "mdb-react-ui-kit": "^6.2.0",
     "node-sass": "^9.0.0",
